completed 4 pages, need to do scss

--- a/index.html
+++ b/index.html
@@ -1,9 +1,94 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="stylesheet/layout.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 <html>
+<title>Walsh259 Project0</title>
+<style>
+  @media (min-width: 800px){
+    h1::before {
+      content: "Hello my name is Liam";
+    }
+  }
+
+  @media (max-width: 799px){
+    h1::before {
+      content: "Hi I'm Liam";
+    }
+  }
+</style>
     <head>
-        <title>My Webpage</title>
+
+
     </head>
     <body>
-        Hello, world!
-    </body>
+      <h3 id="backtotop"></h3>
+      <div class="header">
+
+        <h1></h1>
+
+      </div>
+
+
+      </div>
+
+
+  <ul class="navbar-nav">
+        <ul>
+        <nav-li><a class="active" href="../index.html">Home</a></nav-li>
+        <nav-li><a href="pages/about.html">About</a></nav-li>
+        <nav-li><a href="pages/why.html">Why CS50</a></nav-li>
+        <nav-li><a href="pages/checklist.html">Checklist</a></nav-li>
+  </ul>
+</ul>
+    <div class="spacer">
+    </div>
+    <div class="container" align="center">
+      <h2> Welcome to my project0 website</h2>
+      <p>After years of working with Wordpress websites i stumbled upon CS50 and decided to take the plunge.
+      </p>
+      <br>
+      I live in the UK just outside of London and work for a company selling firewood.
+      <p>My three best hobbies are...
+      </p>
+
+    <div class="row">
+    <div class="col-sm">
+      <h3>Skiing</h3>
+      <img src="images/skiing.jpg" alt="..." class="img-thumbnail">
+      <p>I love the fresh air and the freedom being on a mountain.</p>
+    </div>
+    <div class="col-sm">
+     <h3> Coffee</h3>
+     <img src="images/coffee.jpg" alt="..." class="img-thumbnail">
+     <p>The black gold that keeps me going throughout the day.</p>
+    </div>
+    <div class="col-sm">
+     <h3>All Things IT</h3>
+     <img src="images/work.jpg" alt="..." class="img-thumbnail">
+     <p>The future will be built by code, It's important to be part of it.</p>
+    </div>
+</div>
+
+
+
+        <h2>Moving Forward</h2>
+        <p>I hope that by completing CS50 that i will move away from wordpress website. They are quick to build from a template but they are a pain updating and keeping up todate. being able to build custom features for a website will be a real bonus. </p>
+      </br>
+
+
+
+  </div>
+ </div>
+ <div class="footer">
+        <a href="#backtotop" color="white">Back To Top</a>
+  </body>
+
+
 </html>
