added scss and nesting, fixed nav issue

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="stylesheet/layout.css">
+<link rel="stylesheet" type="text/css" href="stylesheet/variables.css">
+<link rel="stylesheet" type="text/css" href="stylesheet/nesting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -41,7 +43,7 @@
 
   <ul class="navbar-nav">
         <ul>
-        <nav-li><a class="active" href="../index.html">Home</a></nav-li>
+        <nav-li><a class="active" href="index.html">Home</a></nav-li>
         <nav-li><a href="pages/about.html">About</a></nav-li>
         <nav-li><a href="pages/why.html">Why CS50</a></nav-li>
         <nav-li><a href="pages/checklist.html">Checklist</a></nav-li>
