--- a/pages/about.html
+++ b/pages/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="../stylesheet/layout.css">
+<link rel="stylesheet" type="text/css" href="../stylesheet/variables.css">
+<link rel="stylesheet" type="text/css" href="../stylesheet/nesting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -60,7 +62,7 @@
 
 
   </div>
-  <div class="container">
+  <div class="container" align="center">
   <div class="row">
     <div class="col">
       <div class="col-md-auto">
