--- a/pages/why.html
+++ b/pages/why.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="../stylesheet/layout.css">
+<link rel="stylesheet" type="text/css" href="../stylesheet/variables.css">
+<link rel="stylesheet" type="text/css" href="../stylesheet/nesting.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -52,14 +54,14 @@
 
       <div class="container" align="center">
      <h2>Reasons I want to Learn CS50</h2>
-      <ol class="ol" >
+      <ol class="center" >
         <li>I have done a lot of WordPress Websites</li>
         <li>I have learnt some Ruby On Rails</li>
         <li>I'm hoping to build an application to use at work</li>
       </ol>
 
          <h4>Other Reasons I want to Learn CS50</h4>
-      <ul class="ul" style="list-style-type:disc;">
+      <ul class="center" style="list-style-type:disc;">
         <li>This course looked interesting</li>
         <li>The price of this course is good</li>
         <li>I can do this around my current job</li>
